--- a/index.html
+++ b/index.html
@@ -1,6 +1,83 @@
-<html>
-<body>
 
-hello world
+<!DOCTYPE html>
+<html lang=en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+<!--
+this is a hidden comment, the above is useful for mobile device-width
+-->
+  <title>Internet of Chemistry Things Education</title>
+</head>
+
+<body>
+  <header>
+    <h1>Internet of Science Things OER</h1>
+    <nav>
+      <a href="index.html">home</a>
+      <a href="#">placeholder</a>
+      <a href="#">placeholder</a>
+    </nav>
+
+</header>
+<main>
+  <p>This site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
+  </p>
+  <nav>
+    <ul>
+      <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library">IoST Library</a></li>
+      <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library/Spring_2024%3A_Physical_Computing_Class">2024 Physical Computing</a></li>
+      <li><a href="https://chem.libretexts.org/Courses/Intercollegiate_Courses/Cheminformatics">Cheminformatics</a></li>
+      <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/Chem_1402%3A_General_Chemistry_1_(Belford)">Chem1402</a></li>
+      <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/Chem_1403%3A_General_Chemistry_2">Chem 1403</a></li>
+      <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/Chem_1300%3A_Preparatory_Chemistry">Chem1300</a></li>
+    </ul></nav>
+  </nav>
+
+  <center>><figure>
+    <img src="img/Pi1.jpg" alt="Raspberry Pi with connectors">
+    <figcaption>Raspberry Pi 4 with connectors</figcaption>
+  </figure></center
+  <article>
+    
+
+    <p>I am developing an Internet of Science Things/Physical Computing lab at UALR and this site will function as my landing page to access material related to these topics and the courses I teach at UALR, many of which are OERs developed within the LibreTexts HyperLibrary. </p>
+
+    <p>The IoCT and Python Activities were used in the Fall 2018 IOCT class at UALR and have since been updated and moved to the <strong>IOST Class </strong>link below (<strong>Internet of Science Things</strong>), which is hosted in the LibreText Chemistry HyperLibrary.  That material was originally developed by Ehren Bucholtz and then modified  and expanded upon by Bob Belford, Elena Lisitsyna and Hunter Tiner. The<strong> IOT Class</strong> link below is material developed by Phil Williams in the Engineering LibreText HyperLibrary, and is a completely different resources.  The advantage of using LibreText to post OER over this site is that other schools can easily remix the material into other classes.  So the class material on the links below are more up-to-date, but there is material on this site that is not in either of the two IOT courses, especially the sensor education and information material, which was developed in the Spring of 2019 by a UALR student, Elizabeth Dourlain.</p>
+  
+    <p>The Cheminformatics Course is an intercollegiate course hosted within the LibreText HyperLibrary and run on 5 campuses in the Fall of 2019, and has modules in R and Python that could be of value to people interested in IOT.  Please note all the material within the LibreText HyperLibrary is OER.</p>
+    <section>
+      <p>
+        <label for="user-name">User name:</label>
+        <input id="user-name" required maxlength="12">
+      </p>
+      <p>
+        <label for="favorite-atom">Enter atom name: </label>
+        <input id="favorite-atom">
+      </p>
+
+    </section>
+
+
+  </article>
+
+
+</main>
 </body>
+<footer>
+  &copy;?
+</footer>
+
+
+  <!-- 
+  test of comment in a body
+  -->
+
+
+
+
+</body>
+
 </html>
