Update index.html to test commit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ this is a hidden comment, the above is useful for mobile device-width
 
 </header>
 <main>
-  <p>This site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
+  <h1> Under Construction!</h1>
+  <p>I am discontinuing my old site that was hosted on Bluehost because the hosting price literally doubles everytime I renew and this site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
   </p>
   <nav>
     <ul>
