uploading commits to index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ this is a hidden comment, the above is useful for mobile device-width
 </header>
 <main>
   <h1> Under Construction!</h1>
-  <p>I am discontinuing my old site that was hosted on Bluehost because the hosting price literally doubles everytime I renew and this site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
+  <p>Please note, I am discontinuing my old site that was hosted on Bluehost because the hosting price literally doubled everytime I renewed it.  <br>This site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
   </p>
+  <p>I will soon add css to make this nicer, but right now I am just using it for the links, and am teaching myself how to use GitHub in the process.  </p>
   <nav>
     <ul>
       <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library">IoST Library</a></li>
@@ -36,13 +37,14 @@ this is a hidden comment, the above is useful for mobile device-width
       <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/Chem_1300%3A_Preparatory_Chemistry">Chem1300</a></li>
     </ul></nav>
   </nav>
-
+<h2>Sandbox for Testing</h2>
+<p>I am teaching myself html, javascript and css, and so the stuff below is more of a sandbox than a webpage.  I am also figuring out Visual Studio Code and GitHub integration, but everything takes time, and this is stuff I am doing during my spare time, which is rather sparse.</p>
   <center>><figure>
     <img src="img/Pi1.jpg" alt="Raspberry Pi with connectors">
     <figcaption>Raspberry Pi 4 with connectors</figcaption>
   </figure></center
   <article>
-    
+  
 
     <p>I am developing an Internet of Science Things/Physical Computing lab at UALR and this site will function as my landing page to access material related to these topics and the courses I teach at UALR, many of which are OERs developed within the LibreTexts HyperLibrary. </p>
 
