--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ this is a hidden comment, the above is useful for mobile device-width
   <p>I will soon add css to make this nicer, but right now I am just using it for the links, and am teaching myself how to use GitHub in the process.  </p>
   <nav>
     <ul>
+      <li><a href="https://mail.ualr.edu/">UALR email</a></li>
       <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library">IoST Library</a></li>
       <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library/Spring_2024%3A_Physical_Computing_Class">2024 Physical Computing</a></li>
       <li><a href="https://chem.libretexts.org/Courses/Intercollegiate_Courses/Cheminformatics">Cheminformatics</a></li>
