cleaned up text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ this is a hidden comment, the above is useful for mobile device-width
 </header>
 <main>
   <h1> Under Construction!</h1>
-  <p>Please note, I am discontinuing my old site that was hosted on Bluehost because the hosting price literally doubled everytime I renewed it.  <br>This site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
+  <p>This site is being set up as a landing page to educational material being developed by Bob Belford, <a href="mailto:rebelford@ualr.edu">rebelford@ualr.edu</a>. Please contact me if you have any concerns or questions.
   </p>
   <p>I will soon add css to make this nicer, but right now I am just using it for the links, and am teaching myself how to use GitHub in the process.  </p>
   <nav>
