--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ this is a hidden comment, the above is useful for mobile device-width
       <li><a href="https://github.com/rebelford">GitHub/rebelford</a></li>
       <li><a href="https://ualr.edu/">UALR</a></li>
       <li><a href="https://mail.ualr.edu/">UALR email</a></li>
-      <li><a href="https://hulatin.shinyapps.io/SPOD_Viz_App/>Hunter's App</a></li>
+      <li><a href="https://hulatin.shinyapps.io/SPOD_Viz_App/">Hunter's App</a></li>
       <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library">IoST Library</a></li>
       <li><a href="https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/IOST_Library/Spring_2024%3A_Physical_Computing_Class">2024 Physical Computing</a></li>
       <li><a href="https://chem.libretexts.org/Courses/Intercollegiate_Courses/Cheminformatics">Cheminformatics</a></li>
