--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ this is a hidden comment, the above is useful for mobile device-width
   <nav>
     <ul>
       <li><a href="https://github.com/rebelford">GitHub/rebelford</a></li>
+      <li><a href="https://nanohub.org/">nanohub</a></li>
       <li><a href="https://ualr.edu/">UALR</a></li>
       <li><a href="https://mail.ualr.edu/">UALR email</a></li>
       <li><a href="https://github.com/rebelford/Py4Sci">Spring 2025 Py4Sci Repo</a></li>
